versioned_docs/version-2023.1/01_getting-started/03_go-to-the-next-level/01_introduction.md
---
title: 'Go to the next level - introduction'
sidebar_label: 'Introduction'
id: introduction
keywords: [getting started, quick start, next level, introduction]
tags:
    - getting started
    - quick start
    - next level
    - introduction
---

Now that you have completed the [Quick Start](../../../getting-started/quick-start/) and are comfortable with the basics, we'll build an advanced application that will demonstrate more of the Genesis platform features.

Before you get going, you will need a [full developer set-up](/getting-started/prerequisites/introduction/) for this exercise. Make sure you check the requirements and set up what is necessary.

For this application, you will need the [genesis plugin](../../server/tooling/intellij-plugin/). Plase make sure you have it installed.

## What you will build

We want to build a real-time [positions](https://www.investopedia.com/terms/p/position.asp) application, where trades can be entered, and will be aggregated to maintain positions.

In this tutorial we will build a positions trading application. This is a typical application for the capital markets and highlights some of the typical use cases and features of the Genesis low-code platform.
In the tutorial, you will create a more sophisticated form and grid for adding information than those given in the [Learn the basics](../../../getting-started/learn-the-basics/what-can-i-build/build-intro/) section.

The application will make use of the following platform features:
- [Data Model](../../../getting-started/go-to-the-next-level/data-model/)
- [Data Server](../../../getting-started/go-to-the-next-level/events/#data-server) and [Event Handlers](../../../getting-started/go-to-the-next-level/events/#event-handler)
- [Data Grid](../../../getting-started/go-to-the-next-level/data-grid/)
- [Computed values](../../../getting-started/go-to-the-next-level/calculated-data/)
- [Consolidators](../../../getting-started/go-to-the-next-level/consolidators/)
- [Auditable tables](../../../getting-started/go-to-the-next-level/audit/)
- [State management](../../../getting-started/go-to-the-next-level/state-management/)
- [Auditable tables](../../../getting-started/go-to-the-next-level/audit/)
- [Genesis Evaluator rules](../../../getting-started/go-to-the-next-level/setting-genesis-evaluator-rules/) 
- [Data pipelines](../../../getting-started/go-to-the-next-level/data-pipeline/)


We are going to call this example application **alpha**. You will see this reflected in the file names throughout.

## Create a new project
Using the GenX CLI tool, we want to generate a blank full-stack application project. Go to a folder where you want your project to reside, and run:

```powershell
npm install -g @genesislcap/foundation-cli
genx
```

:::tip
Make sure you run the `install` command, so you can update your GenX CLI tool
::: 

### Gradle.properties
Before you finish the creation of your new project, make sure your **gradle.properties** file in **server/jvm** has the  following highlighted properties:

```kotlin {2,3} title="server/jvm/gradle.properties"
                ...
genesisArtifactoryPath=https://genesisglobal.jfrog.io/genesisglobal/libs-release-client
enableGenesisIntellijHelperTasks=true
```

:::note
If you had to modify this file, make sure you `reload all gradle projects`.
:::

<!-- NO EDIT (NEXT 4 LINES) -->
import InsecureFlag from '../../_includes/_cli-insecure-flag.md'

<InsecureFlag />

Follow through the series of questions. For `App name` enter `alpha` and for `App seed` enter `Quick Start Application`.

If this is the first time you are using the GenX CLI tool, check the [Quick Start](../../../getting-started/quick-start/create-a-new-project/) guide first.